--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@ body {
   --themeRed: #F54748;
   --themeBlack: #2E2E2E;
   --pink: #FDECEC;
+  --mypink: #eed6d6;
   --gray: #828282;
   --shadow: -4px 12px 20px -2px rgba(0, 0, 0, 0.19);
   --background-color:  linear-gradient(180deg, rgba(255, 237, 237, 0.85) 0%, rgba(255, 255, 255, 0) 30rem);
@@ -51,4 +52,14 @@ a {
   box-sizing: border-box;
   transition: all 300ms ease;
 
+}
+.btn{
+  width: max-content;
+  padding: 1rem;
+  border-radius: 4rem;
+  border: none;
+  color: white;
+  font-size: 1.1rem;
+  cursor: pointer;
+  background-color: var(--themeRed);
 }
